--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -135,6 +135,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "from monte_carlo_control import OnePlayerMahjongGame\n",
+    "from monte_carlo_try import MonteCarlo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/20 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[pins 1, pins 4, sticks 9, sticks 7, mans 9, sticks 1, mans 4, mans 3, mans 1, white dragon None, sticks 4, sticks 8, sticks 2]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m this_rewards \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2000\u001b[39m):\n\u001b[1;32m----> 9\u001b[0m     episode \u001b[38;5;241m=\u001b[39m \u001b[43mMC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_egreedy_episode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     this_rewards\u001b[38;5;241m.\u001b[39mappend(pd\u001b[38;5;241m.\u001b[39mDataFrame(episode)\u001b[38;5;241m.\u001b[39miloc[:,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msum() )\n\u001b[0;32m     11\u001b[0m     this_steps\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mlen\u001b[39m(episode))\n",
+      "File \u001b[1;32mc:\\Users\\yozyg\\OneDrive\\Documents\\GitHub\\COGS188_Mahjong-AI\\monte_carlo_try.py:127\u001b[0m, in \u001b[0;36mMonteCarlo.generate_egreedy_episode\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    125\u001b[0m \u001b[38;5;66;03m#Begin going through episode\u001b[39;00m\n\u001b[0;32m    126\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m counter \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_episode_size:\n\u001b[1;32m--> 127\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43megreedy_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    128\u001b[0m     state, action, reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menv\u001b[38;5;241m.\u001b[39mtake_turn(action)\n\u001b[0;32m    129\u001b[0m     path\u001b[38;5;241m.\u001b[39mappend((state, action, reward))\n",
+      "File \u001b[1;32mc:\\Users\\yozyg\\OneDrive\\Documents\\GitHub\\COGS188_Mahjong-AI\\monte_carlo_try.py:94\u001b[0m, in \u001b[0;36mMonteCarlo.egreedy_selection\u001b[1;34m(self, state)\u001b[0m\n\u001b[0;32m     92\u001b[0m value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mQ[(tile\u001b[38;5;241m.\u001b[39msuit, tile\u001b[38;5;241m.\u001b[39mvalue)]\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28mprint\u001b[39m(value)\n\u001b[1;32m---> 94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m>\u001b[39m best_value:\n\u001b[0;32m     95\u001b[0m     best_value \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m     96\u001b[0m     best_action \u001b[38;5;241m=\u001b[39m tile\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "steps = []\n",
+    "behavior_rewards = []\n",
+    "target_rewards = []\n",
+    "for j in tqdm(range(20)):\n",
+    "    MC = MonteCarlo(OnePlayerMahjongGame(num_players= 1), max_episode_size = 250)\n",
+    "    this_steps = []\n",
+    "    this_rewards = []\n",
+    "    for k in range(2000):\n",
+    "        episode = MC.generate_egreedy_episode()\n",
+    "        this_rewards.append(pd.DataFrame(episode).iloc[:,-1].sum() )\n",
+    "        this_steps.append(len(episode))\n",
+    "        MC.update_offpolicy(episode)\n",
+    "    steps.append(this_steps)\n",
+    "    behavior_rewards.append(this_rewards)\n",
+    "    episode = MC.generate_greedy_episode()\n",
+    "    target_rewards.append( pd.DataFrame(episode).iloc[:,-1].sum() )\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -187,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -201,12 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11 (default, Jul 27 2021, 07:03:16) \n[Clang 10.0.0 ]"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
-   }
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
