Added repo link

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -13,6 +13,8 @@
    "source": [
     "# Tetris AI Backtracking Comparison\n",
     "\n",
+    "[Link to repo](https://github.com/cogs188-group/COGS188_group/tree/main)\n",
+    "\n",
     "## Group members\n",
     "\n",
     "- Pierce Nguyen\n",
