--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,42 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]"
+      "  0%|          | 0/20 [00:00<?, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[pins 1, pins 4, sticks 9, sticks 7, mans 9, sticks 1, mans 4, mans 3, mans 1, white dragon None, sticks 4, sticks 8, sticks 2]\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m this_rewards \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2000\u001b[39m):\n\u001b[1;32m----> 9\u001b[0m     episode \u001b[38;5;241m=\u001b[39m \u001b[43mMC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_egreedy_episode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     this_rewards\u001b[38;5;241m.\u001b[39mappend(pd\u001b[38;5;241m.\u001b[39mDataFrame(episode)\u001b[38;5;241m.\u001b[39miloc[:,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msum() )\n\u001b[0;32m     11\u001b[0m     this_steps\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mlen\u001b[39m(episode))\n",
-      "File \u001b[1;32mc:\\Users\\yozyg\\OneDrive\\Documents\\GitHub\\COGS188_Mahjong-AI\\monte_carlo_try.py:127\u001b[0m, in \u001b[0;36mMonteCarlo.generate_egreedy_episode\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    125\u001b[0m \u001b[38;5;66;03m#Begin going through episode\u001b[39;00m\n\u001b[0;32m    126\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m counter \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_episode_size:\n\u001b[1;32m--> 127\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43megreedy_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    128\u001b[0m     state, action, reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menv\u001b[38;5;241m.\u001b[39mtake_turn(action)\n\u001b[0;32m    129\u001b[0m     path\u001b[38;5;241m.\u001b[39mappend((state, action, reward))\n",
-      "File \u001b[1;32mc:\\Users\\yozyg\\OneDrive\\Documents\\GitHub\\COGS188_Mahjong-AI\\monte_carlo_try.py:94\u001b[0m, in \u001b[0;36mMonteCarlo.egreedy_selection\u001b[1;34m(self, state)\u001b[0m\n\u001b[0;32m     92\u001b[0m value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mQ[(tile\u001b[38;5;241m.\u001b[39msuit, tile\u001b[38;5;241m.\u001b[39mvalue)]\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28mprint\u001b[39m(value)\n\u001b[1;32m---> 94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m>\u001b[39m best_value:\n\u001b[0;32m     95\u001b[0m     best_value \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m     96\u001b[0m     best_action \u001b[38;5;241m=\u001b[39m tile\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m this_rewards \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2000\u001b[39m):\n\u001b[1;32m----> 9\u001b[0m     episode \u001b[38;5;241m=\u001b[39m \u001b[43mMC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_egreedy_episode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m     this_rewards\u001b[38;5;241m.\u001b[39mappend(pd\u001b[38;5;241m.\u001b[39mDataFrame(episode)\u001b[38;5;241m.\u001b[39miloc[:,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39msum() )\n\u001b[0;32m     11\u001b[0m     this_steps\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mlen\u001b[39m(episode))\n",
+      "File \u001b[1;32mc:\\Users\\yozyg\\OneDrive\\Documents\\GitHub\\COGS188_Mahjong-AI\\monte_carlo_try.py:134\u001b[0m, in \u001b[0;36mMonteCarlo.generate_egreedy_episode\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    132\u001b[0m     state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menv\u001b[38;5;241m.\u001b[39mplayer\n\u001b[0;32m    133\u001b[0m     counter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m--> 134\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw_tile\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m path\n",
+      "File \u001b[1;32mc:\\Users\\yozyg\\OneDrive\\Documents\\GitHub\\COGS188_Mahjong-AI\\monte_carlo_control.py:45\u001b[0m, in \u001b[0;36mOnePlayerMahjongGame.draw_tile\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdraw_tile\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m     44\u001b[0m     \u001b[38;5;66;03m# Player draws a tile from the wall\u001b[39;00m\n\u001b[1;32m---> 45\u001b[0m     tile \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwall\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     46\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplayer\u001b[38;5;241m.\u001b[39mappend(tile)\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tile\n",
+      "\u001b[1;31mIndexError\u001b[0m: pop from empty list"
      ]
     }
    ],
