--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -95,9 +95,7 @@
     "\n",
     "To compare to the backtracking approach, we utilize DQN for a benchmark model. For this, we modified an open source, pre-trained model found on GitHub<a name=\"nguyen\"></a><sup>[1]</sup>,. The model is trained with three linear, fully connected layers, with ReLU activation. The states are defined by the number of lines cleared, number of holes, bumpiness, and height. The actions are defined as a tuple of the figure rotation and x position value. On each epoch, the algorithm will make predictions, using the current model, and either select the index with the best prediction or make a random choice with epsilon probability. The model was trained using the following hyperparameters: batch size = 512, gamma = 0.99, initial epsilon = 1, final epsilon = 1e-3, total epochs = 3000, and replay memory size = 30000. A `DQN` class (with methods for `init` and `forward`) is needed for this implementation; additionally, a `train` method is needed to running the model training process. \n",
     "\n",
-    "<a name=\"nguyen\">[1]</a> Nguyen, V. (2023). Deep Q-Network for Tetris [Computer software]. GitHub. https://github.com/vietnh1009/Tetris-deep-Q-learning-pytorch/\n",
-    "\n",
-    "TODO: potentially add equations/snippets of code (mainly heuristics such as `evaluate_state`)"
+    "<a name=\"nguyen\">[1]</a> Nguyen, V. (2023). Deep Q-Network for Tetris [Computer software]. GitHub. https://github.com/vietnh1009/Tetris-deep-Q-learning-pytorch/"
    ]
   },
   {
@@ -116,19 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results `TODO`: Regenerate box_plot.png, compare DQN and AB, table comparing all 4 backtracking algos (mean, median, std), table comparing dqn and ab (mean, median, std)\n",
-    "`TODO` Overall results are DQN wins by about 25%. Likely due to limited depth search (see Discussion for explanation). Then for backtracking obv full heuristics wins.\n",
-    "\n",
-    "\n",
-    "You may have done tons of work on this. Not all of it belongs here. \n",
-    "Reports should have a __narrative__. Once you've looked through all your results over the quarter, decide on one main point and 2-4 secondary points you want us to understand. Include the detailed code and analysis results of those points only; you should spend more time/code/plots on your main point than the others.\n",
-    "\n",
-    "If you went down any blind alleys that you later decided to not pursue, please don't abuse the TAs time by throwing in 81 lines of code and 4 plots related to something you actually abandoned.  Consider deleting things that are not important to your narrative.  If its slightly relevant to the narrative or you just want us to know you tried something, you could keep it in by summarizing the result in this report in a sentence or two, moving the actual analysis to another file in your repo, and providing us a link to that file.\n",
+    "# Results:\n",
+    "We've compiled results of our experiments through the following metrics: mean, median, standard deviation. Box plots are analyzed in our report. The overall results are that the DQN model wins by about 25% when comparing median, which is likely due to limited depth search for backtracking (see Discussion for explanation). Again analyzing the median, for backtracking models, Full Heuristics + AB Pruning outperforms the rest.\n",
     "\n",
     "### Comparing Various Backtracking Algorithms and Heuristics\n",
     "\n",
     "![Graph Title](grpah\\box_plot1.png)\n",
-    "\n",
     "\n",
     "| Experiment                     | Mean  | Median | Standard Deviation |\n",
     "|--------------------------------|------:|-------:|-------------------:|\n",
@@ -142,13 +133,11 @@
     "\n",
     "Producing the worst results, to no surprise, is the Score model (median = 0) since it uses the least heuristics compared to the other models. The next model with the lowest median (65.5) is the Score+Height model. Although this model has a large difference in median score compared to the Score model, it is far outperformed by both Full Heuristics and AB Pruning. \n",
     "\n",
-    "The results of Full Heuristics and Full Heuristics + AB Pruning both have similar means and medians with both metrics differing in less than one score point. The standard deviation of both also differ by ~0.1. \n",
+    "The results of Full Heuristics and Full Heuristics + AB Pruning both have similar means and medians with both metrics differing in less than one score point. The standard deviation of both also differ by ~0.1. It seems that Alpha Beta pruning does not have much affect on the model.\n",
     "\n",
     "In analyzing the ranges of scores for each, the Score model leads to the smallest standard deviation, since few scores are far from zero. The Score+Height model lead with the largest standard deviation (23.45), while Full Heuristics and AB Pruning consistently perform well; their standard deviations are 7.32 and 7.43, respectively.\n",
     "\n",
     "### Comparing Backtracking vs DQN\n",
-    "`TODO:` Fill this out\n",
-    "Note: only compare using the best backtracking algo not the worse 3\n",
     "\n",
     "![Graph Title](grpah\\box_plot2.png)\n",
     "\n",
@@ -157,10 +146,7 @@
     "| DQN         | 108.57 | 110.0  | 15.411694         |\n",
     "| AB Pruning  | 76.68  | 76.5   | 7.428963          |\n",
     "\n",
-    "\n",
-    "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-    "\n",
-    "Note: add more subsections if you think we need them but idk what other results we have\n"
+    "Considering the backtracking model with highest median score (AB Pruning), we compare its results with the DQN model. It is clear that, in our experiements, DQN outperforms our backtracking algorithm when comparing median and mean scores. DQN, however, has a much greater standard deviation at 15.41 when compared to AB Pruning with a standard deviation of 7.43. Factors that affect these results are included in the Discussion section below.\n"
    ]
   },
   {
