--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -182,9 +182,8 @@
     "While a Tetris AI seems pretty simple and narrow in scope it can have some ethical implications. Tetris is mostly a singleplayer game but tournaments and leaderboards do exist so its possible for someone to cheat using this AI to gain an unfair advantage. Looking through Deon's ethical checklist, since we aren't utilizing any dataset we don't need to worry about any biases or gaps in our data. Our code is unlikely to be used for a different purpose than playing Tetris but even if it is it will only be able to be used to predict where the best place to place a block on a gameboard is so there is a low potential for misuse/harm.\n",
     "\n",
     "### Conclusion\n",
-    "`TODO`\n",
-    "\n",
-    "Reiterate your main point and in just a few sentences tell us how your results support it. Mention how this work would fit in the background/context of other work in this field if you can. Suggest directions for future work if you want to."
+    "Our results show that the Deep Q-Network (DQN) performed better than the 3-level backtracking method, likely because it learns from experience instead of searching exhaustively. However, since we could only run backtracking up to three layers due to limited computing power, a deeper search might give better results—maybe even outperforming DQN.\n",
+    "In the future, it would be interesting to test backtracking with more layers and see how it compares. Exploring a mix of reinforcement learning and search-based methods could also help improve performance."
    ]
   },
   {
