--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "### Comparing Various Backtracking Algorithms and Heuristics\n",
     "\n",
-    "![Graph Title](grpah\\box_plot1.png)\n",
+    "![Graph Title](graphs\\box_plot1.png)\n",
     "\n",
     "| Experiment                     | Mean  | Median | Standard Deviation |\n",
     "|--------------------------------|------:|-------:|-------------------:|\n",
@@ -139,7 +139,7 @@
     "\n",
     "### Comparing Backtracking vs DQN\n",
     "\n",
-    "![Graph Title](grpah\\box_plot2.png)\n",
+    "![Graph Title](graphs\\box_plot2.png)\n",
     "\n",
     "| Experiment   | Mean   | Median | Standard Deviation |\n",
     "|-------------|--------|--------|--------------------|\n",
