cite tetris game code

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -193,7 +193,9 @@
     "\n",
     "<a name=\"mnihnote\">[2]</a> Mnih, V., Kavukcuoglu, K., Silver, D., Rusu, A. A., et al. (2015). *Human‐level control through deep reinforcement learning.* Nature, 518(7540), 529–533.\n",
     "\n",
-    "<a name=\"nguyen\">[3]</a> Nguyen, V. (2023). Deep Q-Network for Tetris [Computer software]. GitHub. https://github.com/vietnh1009/Tetris-deep-Q-learning-pytorch/"
+    "<a name=\"nguyen\">[3]</a> Nguyen, V. (2023). Deep Q-Network for Tetris [Computer software]. GitHub. https://github.com/vietnh1009/Tetris-deep-Q-learning-pytorch/\n",
+    "\n",
+    "<a name=\"zmcedillo\">[4]</a> Zmcedillo. (2024, September 20). Tetris game in Python. GitHub Gist. https://gist.github.com/zmcedillo/012ff15aa3018cb61b45e5bafb4b15ce"
    ]
   },
   {
