adding car supervisor

--- a/Proposal_Project_Group6.ipynb
+++ b/Proposal_Project_Group6.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data - Grace\n",
+    "# Data\n",
     "\n",
     "As this is a reinforcement learning project, the agent will generate its own data through its interaction with the Webots environment and will not use a pre-existing static dataset. Each observation from the agent will consist of various sensor readings <a name=\"webots_sensors\"></a>[<sup>[6]</sup>](#webots_sensors_note):\n",
     "- **RGB image frames**: 1D byte array \n",
